# LazyTables

./: .air.toml  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_CORRECTION_PLAN.md  CODE_CORRECTION_TASKS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  HOMEBREW_FIX.md  INSTALLATION_GUIDE.md  LICENSE  MORE_NOTES.md  Makefile  README.md  RELEASE_NOTES_v0.1.6.md  TASKS.txt  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  test_db_connection.rs  test_sql_files_behavior.md
.bmad-core/: install-manifest.yaml
.bmad-core/checklists/: po-master-checklist.md
.github/workflows/: ci.yml  release.yml
Formula/: lazytables-binary.rb  lazytables-dev.rb  lazytables.rb
cmd/lazytables/: main.go
config/: config.template.toml
configs/: app_config.go  config.go  ui-config.go
configs/keybindings/: connections.go  databases.go  global.go  keybindings.go  output.go  query.go  tables.go
docker/mariadb/init/: 03-bulk-sample-data.sql
docker/mysql/init/: 01-init-database.sql  02-sample-data.sql
docker/pgadmin/: servers.json
docker/postgres/init/: 01-init-database.sql  02-sample-data.sql  03-bulk-sample-data.sql
docker/sqlite/: init.sql
docs/: HOMEBREW_SETUP.md  PRD.md  README.md  UI_BLOCKING_FIXES.md  architecture.md  brainstorming-session-results.md  database-layer-architecture.md  feature-specs.md  front-end-spec.md  future.txt  market-research.md  prd.md  repeated_tasks.txt  rough.md  rough.txt  specs.txt  tasks.txt  tasks_completed.txt
docs/actions/: CODE_ACTIONS_DEV.md  CODE_CORRECTION_TASKS.md  TASKS.txt  fault_tolerance_tasks.txt
docs/architecture/: api-specification.md  components.md  data-models.md  database-schema.md  high-level-architecture.md  index.md  introduction.md  tech-stack.md  tui-architecture.md
docs/changelog/: v0.2.1.md  v0.2.3.md
docs/dev/: 001-getting-started.md  002-architecture.md  003-development-commands.md  004-project-structure.md  005-database-support.md  006-testing.md  007-contributing.md  008-ui-design-specs.md  README.md  features.txt  future.txt  tasks.md  tasks.txt
docs/features/: password-security.md
docs/help/: 001-installation.md  002-first-steps.md  003-navigation.md  004-managing-connections.md  005-querying-data.md  006-configuration.md  README.md
docs/other-tools/: shortcomings.md
docs/prd/: epic-1-multi-database-foundation-enhanced-ui.md  epic-2-sqlite-advanced-tui-features.md  epic-3-redis-integration-complete-feature-set.md  epic-and-story-structure.md  index.md  intro-project-analysis-and-context.md  requirements.md  technical-constraints-and-integration-requirements.md  user-interface-enhancement-goals.md
docs/qa/assessments/: 1.4-nfr-20250119.md
docs/qa/gates/: 1.1-database-adapter-architecture-enhancement.yml  1.2-enhanced-connection-management-interface.yml  1.3-database-adaptive-table-browser.yml  1.4-multi-database-query-editor-foundation.yml
docs/release/: v0.1.3.md
docs/release_notes/: README.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.7.md  v0.2.0-beta.1.md  v0.2.1.md  v0.2.2.md  v0.2.3.md
docs/stories/: 1.1.database-adapter-architecture-enhancement.md  1.2.enhanced-connection-management-interface.md  1.3.database-adaptive-table-browser.md  1.4.multi-database-query-editor-foundation.md  1.5.enhanced-results-display-and-export.md  2.1.sqlite-file-based-database-support.md  2.2.advanced-sql-query-editor-with-syntax-highlighting.md  2.3.enhanced-data-export-and-visualization.md
docs/user/: README.md  configuration.md  guides.md  hotkeys.md  installation.md  key-bindings.md  troubleshooting.md
docs/wip/: bugs_found.txt  connections.txt  connections_add_edit_mode.txt  error_handling.txt  help_modal.txt  other_databases.txt  overall.txt  query_editor.txt  refactoring.txt  schema_viewing.txt  table_data.txt  theme.txt
homebrew/: lazytables.rb
internal/app/: app.go  focus.go  keybindings.go  status.go  ui.go
internal/db/: adapter.go  factory.go  types.go
internal/db/mysql/: adapter.go  metadata.go  query.go  utils.go
internal/db/postgres/: adapter.go  metadata.go  query.go  utils.go
internal/db/sqlite/: adapter.go
internal/keybindings/: keybindings.go
internal/models/: connection.go  database.go  table.go
internal/storage/: connection_store.go
internal/ui/: ui.go
internal/ui/components/: connections_panel.go  databases_panel.go  input_dialog.go  notification.go  output_panel.go  query_panel.go  status_bar.go  tables_panel.go
internal/ui/layout/: layout.go
internal/ui/theme/: theme.go
internal/utils/: helpers.go
openspec/changes/c0001-forbid-unsafe-code/: design.md  proposal.md  tasks.md
openspec/changes/c0002-remove-dead-subsystems/: design.md  proposal.md  tasks.md
openspec/changes/c0003-database-adapter-consolidation/: design.md  proposal.md  tasks.md
openspec/changes/c0004-database-write-parity/: design.md  proposal.md  tasks.md
openspec/changes/c0005-refactor-appstate-modules/: design.md  proposal.md  tasks.md
openspec/changes/c0006-refactor-uistate-modules/: design.md  proposal.md  tasks.md
pkg/logger/: logger.go
scripts/: README.md  build-release-binaries.sh  build-release.sh  create-github-release.sh  create-release-files.sh  finalize-brew-release.sh  install-homebrew.sh  install.sh  prepare-release.sh  setup-homebrew-tap.sh
src/: cli.rs  constants.rs  debug_log.rs  lib.rs  logging.rs  main.rs  terminal.rs
src/app/: events.rs  mod.rs  state.rs
src/cli/: theme_commands.rs
src/commands/: basic.rs  connection.rs  editing.rs  mod.rs  navigation.rs  query.rs
src/config/: mod.rs  shortcuts.rs
src/core/: error.rs  mod.rs
src/database/: app_state.rs  connection.rs  connection_manager.rs  factory.rs  mod.rs  mysql.rs  objects.rs  postgres.rs  query_history.rs  sqlite.rs
src/event/: mod.rs
src/io/: async_fs.rs  mod.rs
src/security/: mod.rs  password.rs
src/state/: database.rs  mod.rs  ui.rs  view.rs
src/themes/: mod.rs
src/ui/: help.rs  mod.rs
themes/: README.md  dark.toml  light.toml
(+59 files in other folders)
